@startuml
'https://plantuml.com/class-diagram

class ATM{
    int balance
    void moneyInt(int amount)
    void moneyOut(int amount)
}
class Ready
class Limited
class NoMoney
interface IATM_State{
    void moneyIntHandle(int amount, ATM atm)
    void moneyOutHandle(int amount, ATM atm)
}
ATM --> IATM_State : state
IATM_State <|.. Ready
IATM_State <|.. Limited
IATM_State <|.. NoMoney


@enduml